--- a/ACME/css/base.css
+++ b/ACME/css/base.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(https://azizamistral.github.io/FEWD/ACME/images/background.png);
+  background-image: url(images/background.png);
   font-family: "Lucida Grande";
   margin: 0px;
 }
