--- a/ACME/css/base.css
+++ b/ACME/css/base.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(images/background.png);
+  background-image: url(../images/background.png);
   font-family: "Lucida Grande";
   margin: 0px;
 }
@@ -15,7 +15,6 @@ header a {
 }
 nav {
   float: right;
-  font-family: "Lucida Grande";
   font-size: 16px;
   color: white;
   text-shadow: 1px 1px black;
@@ -28,11 +27,10 @@ li {
   padding: 10px;
 }
 main {
-  margin-left: auto;
-  margin-right: auto;
+  margin: 50px 50px 0 50px;
+  padding: 30px;
   background-color: white;
   border-radius: 8px;
-  padding: 30px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   width: 800px;
 }
@@ -43,14 +41,15 @@ main {
   border: none;
   padding: 10px 20px;
   border-radius: 4px;
-  text-decoration: none;
 }
 footer {
   margin-left: auto;
   margin-right: auto;
+  padding-top: 10px;
+  border-top: 1px solid rgb(193,193,193);
+  margin-top: 40px;
   text-align: center;
   color: rgb(154,154,154);
   font-size: .7em;
-  border-top: 1px solid gray;
   width: 850px;
 }
