--- a/ACME/css/base.css
+++ b/ACME/css/base.css
@@ -27,7 +27,9 @@ li {
   padding: 10px;
 }
 main {
-  margin: 50px 50px 0 50px;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 30px;
   background-color: white;
   border-radius: 8px;
